--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ span {
 .skills-content h3 {
   font-size: 3.2rem;
   font-weight: 700;
-  margin-top: -10%;
+  /* margin-top: -10%; */
 }
 
 .skills-content h3:nth-of-type(2) {
@@ -135,8 +135,9 @@ span {
   line-height: 1.3;
 }
 
-.skills-img img{
-  width: 35vw;
+.skills img{
+  width: 70px;
+  height: 70px;
 }
 
 .skills-content p{
@@ -161,7 +162,7 @@ span {
   border-radius: 10%;
   font-size: 50px;
   color: var(--main-color);
-  margin: 3rem 1.5rem 3rem 0;
+  margin: 3rem 1.5rem 1rem 0;
   transition: .5s ease;
 }
 
