--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,13 @@
 }
 
 :root {
-  --bg-color: #31323a;
-  --bg-sec-color: #3d3e46;
-  --bg-third-color: #3d3e42;
+  --bg-color-dark: #201320;
+  /* --bg-color: #231223; */
+  --bg-color-light: #F5EDED;
+  --bg-third-color: #C8A1E0;
   --text-color: #fff;
-  --main-color: #C69749;
+  --main-color: #65558F;
+  --main-color2: #C8A1E0;
   /* --text-color: #ff66c4;
   --main-color: #c1ff72; */
 }
@@ -24,13 +26,12 @@ html {
 }
 
 body {
-  background: var(--bg-color);
+  background: var(--bg-color-dark);
   color: var(--text-color);
 }
 
 section {
-  min-height: 100vh;
-  padding: 10rem 9% 2rem;
+  min-height: 90vh;
 }
 
 .header {
@@ -39,7 +40,7 @@ section {
   left: 0;
   width: 100%;
   padding: 2rem 9%;
-  background: var(--bg-color);
+  background: var(--bg-color-dark);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -48,23 +49,23 @@ section {
 
 .logo {
   font-size: 2.5rem;
-  color: var(--text-color);
-  font-weight: 600;
+  color: var(--main-color2);
+  font-weight: 500;
   cursor: default;
 }
 
 .navbar a {
-  font-size: 1.7rem;
+  font-size: 2rem;
   color: var(--text-color);
   margin-left: 4rem;
 }
 
 .navbar a:hover {
-  color: var(--main-color);
+  color: var(--main-color2);
 }
 
 .navbar a.active {
-  color: var(--main-color);
+  color: var(--main-color2);
 }
 
 #menu-icon {
@@ -78,16 +79,19 @@ section {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 10rem 9% 10rem;
 }
 
 .home-content h3 {
   font-size: 3.2rem;
-  font-weight: 700;
+  font-weight: 500;
+  color: var(--main-color2);
 }
 
 .home-content h4 {
   font-size: 2.5rem;
-  font-weight: 700;
+  font-weight: 500;
+  color: var(--main-color2);
 }
 
 .home-content h3:nth-of-type(2) {
@@ -100,7 +104,7 @@ span {
 
 .home-content h1{
   font-size: 5.6rem;
-  font-weight: 700;
+  font-weight: 100;
   line-height: 1.3;
 }
 
@@ -199,19 +203,26 @@ span {
   box-shadow: 0 0 1rem var(--main-color);
 }
 
-.btn {
+.btn-resume {
   display: inline-block;
-  padding: 1rem 2.8rem;
+  padding: 1rem 2.8rem 1rem;
   background: var(--main-color);
   border-radius: 4rem;
   box-shadow: none;
   font-size: 1.6rem;
-  color: var(--bg-sec-color);
+  color: var(--text-color);
   letter-spacing: .1rem;
   font-weight: 600;
   transition: .5s ease;
 }
 
-.btn:hover {
+.btn-resume:hover {
   box-shadow: 0 0 1rem var(--main-color);
+}
+
+.about_me{
+  font-size: 2rem;
+  justify-content: left;
+  align-items: left;
+  text-align: left;
 }
