--- a/src/App.css
+++ b/src/App.css
@@ -641,7 +641,12 @@ section {
   min-height: 90vh;
 }
 
+.mitad{
+  flex: 1;
+}
+
 /* HEADER */
+
 .header {
   position: fixed;
   top: 0;
@@ -657,7 +662,6 @@ section {
 
 .logo {
   font-size: 2.5rem;
-  color: var(--main-color2);
   font-weight: 500;
   cursor: default;
 }
@@ -694,6 +698,7 @@ section {
 .lucide:hover{
   stroke: #C8A1E0;
 }
+
 .lucide{
   margin: 0 0 0 0.5rem;
 }
@@ -726,6 +731,10 @@ section {
 
 span {
   color: var(--main-color);
+}
+
+.heading-color{
+  color: var(--main-color2);
 }
 
 .home-content h1{
@@ -779,7 +788,6 @@ span {
   box-shadow: 0 0 1rem var(--main-color);
 }
 
-
 /* SKILLS */
 
 .skills {
@@ -790,69 +798,133 @@ span {
 }
 
 .skills-content h3 {
-  font-size: 3.2rem;
-  font-weight: 700;
-  /* margin-top: -10%; */
+  font-size: 4rem;
+  font-weight: 500;
+  margin-top: 12rem;
 }
 
 .skills-content h3:nth-of-type(2) {
   margin-bottom: 2rem;
 }
 
-.skills-content h1{
-  font-size: 5.6rem;
-  font-weight: 700;
-  line-height: 1.3;
-}
-
-.skills img{
-  width: 70px;
-  height: 70px;
-}
-
-.skills-content p{
-  font-size: 1.6rem;
-  justify-content: center;
-  align-items: center;
-}
-
-.skills-cositos {
+.skills-container {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  justify-items: center;
+  grid-template-columns: repeat(6, 1fr);
+  align-items: center;
   gap: 2rem;
+  margin-top: 10rem;
 }
 
-.skills-cositos a{
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  height: 100px;
-  background: var(--bg-sec-color);
+.skills-cositos{
+  width: 140px;
+  height: 140px;
   border: .2rem;
   border-radius: 10%;
-  font-size: 50px;
   color: var(--main-color);
-  margin: 3rem 1.5rem 1rem 0;
-  transition: .5s ease;
-}
-
-/* .skills-cositos i{
+  margin: 3rem 1.5rem 1rem 1rem;
+  transition: .1s ease;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 10%;
-  height: 10%;
-} */
+}
 
-.skills-cositos a:hover{
-  background: var(--bg-third-color);
-  color: var(--bg-main-color);
+.skills-cositos:hover{
+  color: var(--text-color);
   box-shadow: 0 0 1rem var(--main-color);
 }
 
-/* MEDIA */
+.skills-cositos img{
+  width: 80px;
+  height: 80px;
+}
 
+.skills-cositos p{
+  font-size: 20px;
+  padding-top: 10px;
+  font-weight: 500;
+}
 
+/* PROJECTS */
+
+.projects {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.projects-content h3 {
+  font-size: 4rem;
+  font-weight: 500;
+  margin-top: 12rem;
+}
+
+.projects-content h3:nth-of-type(2) {
+  margin-bottom: 2rem;
+}
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 5rem;
+}
+
+.projects-mitad{
+  display: flex;
+  flex-direction: row;
+}
+
+.projects-cositos{
+  width: 80rem;
+  height: 50rem;
+  border: .2rem;
+  border-radius: 10%;
+  color: var(--text-color);
+  margin: 3rem 1.5rem 1rem 1rem;
+  transition: .1s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.projects-cositos:hover{
+  color: var(--text-color);
+  box-shadow: 0 0 1rem var(--main-color);
+}
+
+.projects-cositos img{
+  max-width: 100%;
+  /* Ajusta el tamaño de la imagen dentro de su contenedor */
+  height: auto;
+}
+
+.projects-cositos p{
+  font-size: 20px;
+  padding-top: 10px;
+  font-weight: 500;
+}
+
+.p-img{
+  width: 40%;
+}
+
+.p-text{
+  width: 60%;
+}
+
+.projects-languages{
+  background: var(--main-color);
+  border-radius: 2rem;
+  box-shadow: none;
+  font-size: 1.6rem;
+  color: var(--text-color);
+  letter-spacing: .1rem;
+  padding: 0rem 1rem 1rem 0rem;
+  justify-content: center;
+}
 
 /* CONTACT ME */
 
@@ -876,8 +948,6 @@ span {
   color: var(--bg-sec-color);
   box-shadow: 0 0 1rem var(--main-color);
 }
-
-
 
 /* MEDIA */
 
